--- a/Day01/ex03/Makefile
+++ b/Day01/ex03/Makefile
@@ -1,8 +1,9 @@
 NAME = violence
 
 SRCS = ./main.cpp \
-		./Weapon.cpp \
-	   ./HumanA.cpp
+	   ./Weapon.cpp \
+	   ./HumanA.cpp \
+	   ./HumanB.cpp
 
 OBJS	= 	$(SRCS:.cpp=.o)
 
