--- a/Day03/ex02/Makefile
+++ b/Day03/ex02/Makefile
@@ -1,7 +1,8 @@
-NAME = ScavTrap
+NAME = FragTrap
 
 SRCS = ./ClapTrap.cpp \
 	   ./ScavTrap.cpp \
+	   ./FragTrap.cpp \
 	   ./main.cpp
 
 OBJS	= 	$(SRCS:.cpp=.o)
