WORKING ON DAY04/EX00 STAY ON CLASS CALLED WRONG ANIMAL

--- a/Day04/ex00/Makefile
+++ b/Day04/ex00/Makefile
@@ -1,7 +1,9 @@
-NAME = ClapTrap
+NAME = Animal
 
 SRCS = ./Animal.cpp \
-	   ./main.cpp
+	   ./main.cpp \
+	   ./Cat.cpp \
+	   ./Dog.cpp \
 
 OBJS	= 	$(SRCS:.cpp=.o)
 
