DAY04/EX02 DONE

--- a/Day04/ex02/Makefile
+++ b/Day04/ex02/Makefile
@@ -1,10 +1,10 @@
 NAME = Animal
 
-SRCS = ./AAnimal.cpp \
-	   ./main.cpp \
+SRCS = ./main.cpp \
 	   ./Brain.cpp \
 	   ./Cat.cpp \
 	   ./Dog.cpp \
+	   ./AAnimal.cpp \
 
 OBJS	= 	$(SRCS:.cpp=.o)
 
